Made changes to javascript. Added code for number system ad well as click functions

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 </head>
 
 <body>
-
+    <p id="result"> </p>
     <div class="crystals">
 
     </div>
+
+    <p id="win"></p>
+    <p id="lost"></p>
     <script type = "text/javascript" src = "./assets/javascript/game.js"></script>
 </body>
 
