--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="crystals">
 
     </div>
-
+    <p id="previous"></p>
     <p id="win"></p>
     <p id="lost"></p>
     <script type = "text/javascript" src = "./assets/javascript/game.js"></script>
