Added images to crystal boxes as well as a background for the game.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 </head>
 
 <body>
-    <p id="result"> </p>
-    <div class="crystals">
+  <div class="box">
 
-    </div>
+    <p id="result"> </p>
     <p id="previous"></p>
     <p id="win"></p>
     <p id="lost"></p>
+  
+    <div class="crystals">
+      </div>
     <script type = "text/javascript" src = "./assets/javascript/game.js"></script>
+
+
+  </div>
+  
 </body>
 
 </html>
