Added music button to the page and gave everyhting a double check to make sure it was working properly

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>CrystalCOllector</title>
+  <title>Dragon Ball Collector!!!</title>
   <link rel="stylesheet" type="text/css" href="assets/CSS/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -11,11 +11,18 @@
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
 
-  </body>
+
+ 
 </head>
 
 <body>
+    
   <div class="box">
+      <audio controls>
+          <source src="./assets/images/Birth of a God Best of Dragonball Super OST Vol.1 Epic Orchestral Rock Mix.mp3" type="audio/ogg">
+          <source src="./assets/images/Birth of a God Best of Dragonball Super OST Vol.1 Epic Orchestral Rock Mix.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
     <div class="header">
       <h1>Dragon Ball Collector!!!</h1>
     </div>
